Fixed graphical bug on smaller screens

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,8 +1,8 @@
 div.App {
-  width: 100%;
-  height: 100%;
-  max-width: 1350px;
-  max-height: 800px;
+  width: 1350px;
+  height: 800px;
+  max-width: calc(100% - 48px);
+  max-height: calc(100% - 48px);
   background-color: var(--lightest);
   border-radius: 4px;
   box-shadow: var(--shadow-wide);
@@ -14,17 +14,11 @@ div.App {
 
   border: 1px solid var(--mid);
 
-  @media only screen and (max-width: 1350px) {
-    max-height: calc(100% - 48px);
-  }
-
-  @media only screen and (max-height: 800px) {
-    max-width: calc(100% - 48px);
-  }
-
   @media only screen and (max-width: 600px) {
-    max-height: unset;
-    max-width: unset;
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
   }
 
   &.leftColumn { grid-template-columns: 100% 0%; }
