--- a/src/styles/Icon.scss
+++ b/src/styles/Icon.scss
@@ -13,7 +13,7 @@ i.bi {
   &.spin {
     display: inline-block;
     animation: spin linear 1s infinite;
-    font-size: 32px !important;
+    font-size: 64px !important;
   }
 }
 
